[gd_scene load_steps=9 format=3 uid="uid://bmaecxa81b56j"]

[ext_resource type="Script" path="res://scripts/Characthers/pathfinding/Influenza2.gd" id="1_ivp2f"]
[ext_resource type="AudioStream" uid="uid://bci23xhxmk4vc" path="res://sounds/SFX/Influenza/Projectile/influenza_projectile_sound.wav" id="2_qyl77"]
[ext_resource type="AudioStream" uid="uid://dod0ghuv3nyeo" path="res://sounds/SFX/Influenza/InfluenzaDeathSound.wav" id="3_23wsa"]
[ext_resource type="Texture2D" uid="uid://df0ywocvinitg" path="res://sprites/Monster/influenza/Influenza.png" id="4_cpnkm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_kjfol"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8by2p"]
atlas = ExtResource("4_cpnkm")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi4gq"]
atlas = ExtResource("4_cpnkm")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_xvbic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8by2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi4gq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Influenza" type="CharacterBody3D" groups=["influenza"]]
collision_layer = 8
collision_mask = 18
platform_on_leave = 2
platform_floor_layers = 4294967041
platform_wall_layers = 1
script = ExtResource("1_ivp2f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_kjfol")

[node name="GoToObject" type="Timer" parent="."]

[node name="ShootTime" type="Timer" parent="."]
wait_time = 3.0

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.54406, 0)

[node name="BlinkCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -2.0
path_max_distance = 2.01
avoidance_enabled = true
height = 2.0
radius = 2.0
neighbor_distance = 10.0
max_neighbors = 1
time_horizon_agents = 5.0
time_horizon_obstacles = 3.0
use_3d_avoidance = true
avoidance_mask = 9

[node name="InfluenzaProjectileSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_qyl77")
volume_db = -10.0

[node name="InfluenzaAnimation" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.391261, 0, 0, 0, 0.391261, 0, 0, 0, 0.391261, 0, -0.0935751, 0)
billboard = 1
sprite_frames = SubResource("SpriteFrames_xvbic")
autoplay = "default"
frame_progress = 0.669839

[node name="InfluenzaDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_23wsa")
volume_db = 10.0
bus = &"SFX"

[connection signal="timeout" from="GoToObject" to="." method="_on_go_to_object_timeout"]
[connection signal="timeout" from="ShootTime" to="." method="_on_shoot_time_timeout"]
